--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-header></app-header>
+<div class="container-fluid">
+  <app-header></app-header>
+  <div class="col-md-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
+
