--- a/src/app/clinic/clinic-detail/clinic-detail.component.sass
+++ b/src/app/clinic/clinic-detail/clinic-detail.component.sass
@@ -15,8 +15,16 @@
   width: 300px
 
 .hotel
-  color: black
+  color: grey
   font-size: 1.3em
+
+.clinic-name
+  font-size: 1.6em
+  color: grey
+  text-align: left
+
+.services-row
+  margin-top: 25px
 
 
 
