--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,4 @@
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap';
 @import './sass/variables.scss';
+@import "~@ng-select/ng-select/themes/material.theme.css";
