--- a/src/app/clinic/clinic-info/clinic-info.component.html
+++ b/src/app/clinic/clinic-info/clinic-info.component.html
@@ -3,6 +3,6 @@
   <div class="card-body">
     <h5 class="card-title">{{clinic.nome}}</h5>
     <p class="card-text">{{clinic.endereco}}</p>
-    <a href="#" class="btn btn-primary">Ver Clinica</a>
+    <a [routerLink]="[ '/detalhes', clinic.id ]" class="btn btn-primary">Ver Clinica</a>
   </div>
 </div>
