--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav">
             <li class="nav-item"  routerLinkActive="active">
               <a class="nav-link" [routerLink]="[ '/']">Home</a>
             </li>
@@ -15,6 +15,9 @@
             <li class="nav-item"  routerLinkActive="active">
               <a class="nav-link" [routerLink]="[ '/sobre']" >Sobre <span class="sr-only"></span></a>
             </li>
+            <li class="nav-item"  routerLinkActive="active">
+                <a class="nav-link" [routerLink]="[ '/registro']" >Registro <span class="sr-only"></span></a>
+              </li>
           </ul>
         </div>
       </nav>
